# birl_baxter_simulator

./: README.md  faster  pa_box.py  pa_snap.py
birl_baxter_simulator/: CMakeLists.txt  package.xml
birl_sim_examples/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py  setup.py~
birl_sim_examples/config/: hardcoded_config.py  hardcoded_config.py~
birl_sim_examples/launch/: pa_box_gazebo.launch  pa_demo.rviz  pa_snap_gazebo.launch  pick_n_place_box.launch  pick_n_place_box_service.launch  pick_n_place_box_smach_service.launch  place_box.launch  place_snap.launch
birl_sim_examples/msg/: Hmm_Classification.msg  Hmm_Log.msg  Tag_EndpointPose.msg  Tag_MultiModal.msg  Tag_Wrench.msg
birl_sim_examples/scripts/: Full_sum_log.eps  Subtask1.eps  Subtask2.eps  Subtask3.eps  Subtask4.eps  Subtask5.eps  haha  haha.py  hmm_model_train.py  hmm_model_train2.py  hmm_online_real_baxter.py  hmm_online_streaming.py  pa_box.py  pa_box2.py  pa_snap.py  pick_n_place_box2.py  pick_n_place_box_test_module.py  pick_n_place_client.py  pick_n_place_joint_trajectory_smach.py  pick_n_place_smach_client.py  pick_n_place_srv_client.py  pick_n_place_srv_client_smach.py  pick_n_place_srv_server.py  place_box.py  pose_state_topic.py  real_pick_n_place_joint_trajectory_smach.py  real_pick_n_place_srv_client_smach.py  real_topic_multimodal.py  topic_multimodal.py
birl_sim_examples/scripts/baxter_PNP_endpose/: baxter_r_arm_dmp.py  config.py  dmp_r_joint_trajectory_client.py  hmm_online_endpose_classification.py  hmm_online_endpose_detection.py  open_drawer_smach_test.py  pick_n_place_with_5_states_using_joint_trajectory_and_smach_with_recovery.py  real_pick_n_place_joint_trajectory_smach_recovery.py
birl_sim_examples/scripts/baxter_PNP_endpose_N_wrench/: hmm_online_endpose_N_wrench_classification.py  hmm_online_endpose_N_wrench_detection.py
birl_sim_examples/scripts/baxter_PNP_wrench/: hmm_online_wrench_classification.py  hmm_online_wrench_detection.py
birl_sim_examples/scripts/command_tool/: apply_wrench.txt
birl_sim_examples/scripts/pick_and_place_normal/move_to_joint/: pick_n_place_srv_client_smach.py  pick_n_place_srv_client_smach.py~
birl_sim_examples/scripts/pick_and_place_normal/trajectory/: hardcoded_data.py  pick_n_place_joint_trajectory_srv_client.py  pick_n_place_joint_trajectory_srv_server.py
birl_sim_examples/scripts/pick_and_place_task_for_hmm_project/: hardcoded_data.py  pick_n_place_with_4_states_using_joint_trajectory_server_and_smach_with_recovery.py  topic_multimodal.py  topic_recorder.py
birl_sim_examples/scripts/real_baxter_open_drawer_task/: config.py  dmp_r_joint_trajectory_client.py
birl_sim_examples/scripts/real_baxter_pick_and_place_task/: pick_n_place_with_4_states_using_joint_trajectory_server_and_smach_with_recovery.py  pick_n_place_with_5_states_using_joint_trajectory_server_and_smach_with_recovery.py  real_pick_n_place_srv_client.py  real_pick_n_place_srv_client_smach.py  real_pick_n_place_srv_server.py
birl_sim_examples/scripts/real_task_common/: real_topic_multimodal.py
birl_sim_examples/scripts/sim_baxter_pick_and_place_task/: pick_n_place_srv_client_random_smach.py  pick_n_place_srv_server.py  place_box.py
birl_sim_examples/scripts/sim_task_common/: pose_state_topic.py  wrench_tag_topic.py
birl_sim_examples/src/arm_move/: PID.py  pick_and_place.py  srv_action_client.py  srv_client.py
birl_sim_examples/srv/: Add_Gazebo_Model.srv  Go_To_Position.srv  Go_To_Start_Position.srv  Gripper_Move.srv  Traj_Move_Pose.srv  Traj_Move_Pose.srv~  Traj_Move_Start_Pose.srv
birl_sim_examples/test/: pick_n_place_box.py  pick_n_place_srv_client_random.py  place_snap.py  place_snap_srv_client_smach.py
